# convex-rs

./: AGENT.md  Cargo.toml  README.md
src/: convex_functions.rs  convex_sets.rs  duality.rs  gradient_descent.rs  interior_point.rs  lib.rs  linear_programming.rs  newton.rs  proximal.rs  quadratic_programming.rs  resource_allocation.rs
