[package]
name = "convex-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/convex-rs"
description = "Convex optimization in Rust — linear programming, quadratic programming, interior point methods, proximal operators"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
